public/Style/components/circularSlider.css
.slider{
	display: none;
}

.slider_size2{
	display: none;
}

.buttons{
	display: none;
}



@media screen and (min-width: 900px) and (max-width: 1200px) {
.slider{
	/*width: 100%;*/
	display: flex;
	align-self: center;
	align-items: center;
	/*justify-content: space-around;*/
}

#result {
	/*width: 96.5%;*/
	display: flex;
	flex-flow: row wrap; 
	/*justify-content: space-between;*/
}

.sliderImg{
	margin: 10px 10px;
	width: 240px;
	height: 455px;
	background-size: cover;
	background-repeat: no-repeat;
}
	

.buttons {
	display: block;
	width: 60px;
	height: 60px;
	background-size: cover;
	background-image: url(../../images/widgets/arrow.svg);
	background-repeat: no-repeat;
}


.buttons__next {
	background-image: url(../../images/widgets/arrow-next.svg);
}

